Created a 'Triainer' class to train network on many input/output pairs. Created another test document specifically for testing different training sets to see if the program will work. So far there is only one test in there. The other test document was renamed to basicFuntionTests.cpp. Also changed the structure of the backprogpogation algorithm from directly changing the composition of the network to calculating and returning the derivatives to the Trainer class which then averages the many input/output pairs' derivatives and only *then* updates the weights.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,16 +2,25 @@ cmake_minimum_required(VERSION 3.18.4)
 
 project(CPPANN)
 
-option(MAIN "Build driver (main.cpp)" OFF)
-option(TESTS "Build tests (tests.cpp)" ON)
+option(MAIN "Build driver (main.cpp)" ON)
+option(TEST "Build basicTests (basicFunctionsTests.cpp)" ON)
+option(BASIC_FUNCTION_TESTS "Build basicTests (basicFunctionsTests.cpp)" ON)
+option(TRAINING_TESTS "Build trainingTests (trainingTests.cpp)" ON)
 
 if(MAIN)
-    add_executable(main src/main.cpp src/Layer.cpp src/Network.cpp)
+    add_executable(main src/main.cpp src/Layer.cpp src/Network.cpp src/Trainer.cpp)
 endif()
 
-if(TESTS)
+if(TEST)
     add_subdirectory(googletest)
-    include_directories(googletest/googletest/include src)
-    add_executable(test test/tests.cpp)
-    target_link_libraries(test PRIVATE gtest)
+    include_directories(googletest/googletest/include src test)
+    if(BASIC_FUNCTION_TESTS)
+        add_executable(basicFunctionsTests test/basicFunctionsTests.cpp)
+        target_link_libraries(basicFunctionsTests PRIVATE gtest)
+    endif()
+    if(TRAINING_TESTS)
+        include_directories(googletest/googletest/include src)
+        add_executable(trainingTests test/trainingTests.cpp src/Trainer.cpp)
+        target_link_libraries(trainingTests PRIVATE gtest)
+    endif()
 endif()
