Two main cpp files were created in this commit. The trainer and the tester. The other cpp files were modified to aid in the driving of the Trainer and the Tester. These two files define the functions for reading and training the network on the database. Currently, the Network has not had successful trials in testing. This commit contains a single threaded model of training. The next one will contain a multithreaded one.

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@ build/
 googletest/
 output/
 MNIST Processing/drawnImages
+MNIST Processing/MNISTTrainingDatabases
+MNIST Processing/MNISTTrialThree
+MNIST Processing/MNISTTrialTwo
