--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,8 +19,8 @@ if(TEST)
         target_link_libraries(basicFunctionsTests PRIVATE gtest)
     endif()
     if(TRAINING_TESTS)
-        include_directories(googletest/googletest/include src)
-        add_executable(trainingTests test/trainingTests.cpp src/Trainer.cpp)
-        target_link_libraries(trainingTests PRIVATE gtest)
+        include_directories(googletest/googletest/include src FileStorage)
+        add_executable(test test/trainingTests.cpp src/Trainer.cpp)
+        target_link_libraries(test PRIVATE gtest sqlite3)
     endif()
 endif()
