Commit of temporary multithreading attempts that are leading to extremely high weight values

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,7 @@ MNIST_Processing/MNISTTrainingDatabases
 MNIST_Processing/MNISTTrialFour
 MNIST_Processing/MNISTTrialThree
 MNIST_Processing/MNISTTrialTwo
+MNIST_Processing/MNISTTrialFive
+MNIST_Processing/MNISTTrialSix
+MNIST_Processing/MNISTTrialSeven
+MNIST_Processing/MNISTTrialEight
