--- a/MNIST_Processing/CMakeLists.txt
+++ b/MNIST_Processing/CMakeLists.txt
@@ -1,11 +1,12 @@
-cmake_minimum_required(VERSION 3.18.4)
-
-project(CPPANN)
-
-set(SOURCES ../src/Network.cpp     ../src/Layer.cpp     ../src/Trainer.cpp     ../FileStorage/NetworkSaver.cpp
-            ../include/Network.hpp ../include/Layer.hpp ../include/Trainer.hpp ../FileStorage/NetworkSaver.hpp            
+add_library(
+    support
+    "${CMAKE_CURRENT_SOURCE_DIR}/support/MNISTTester.cpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/support/MNISTTester.hpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/support/MNISTTrainerV2.cpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/support/MNISTTrainerV2.hpp"
 )
 
-add_executable(MNISTTraining TestTrainer.cpp ../src)
-target_include_directories(MNISTTraining PRIVATE ../include  FileStorage support)
-target_link_libraries(MNISTTraining PRIVATE sqlite3 pthread)
+add_executable(MNISTTraining TestTrainer.cpp)
+
+target_include_directories(support PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/support")
+target_link_libraries(MNISTTraining PRIVATE sqlite3 pthread Network File-Storage support)
