Working toward a properly functioning network. Recently messed up something with the linker so now the code won;t compile. Making this commit to save my work and jump back to see if the issue is with my code or with the compiler/computer

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@ MNIST_Processing/MNISTTrialFive
 MNIST_Processing/MNISTTrialSix
 MNIST_Processing/MNISTTrialSeven
 MNIST_Processing/MNISTTrialEight
+MNIST_Processing/MNISTTrialNine
