--- a/MNIST_Processing/CMakeLists.txt
+++ b/MNIST_Processing/CMakeLists.txt
@@ -6,7 +6,7 @@ add_library(
     "${CMAKE_CURRENT_SOURCE_DIR}/support/MNISTTrainerV2.hpp"
 )
 
-add_executable(MNISTTraining TestTrainer.cpp)
+add_executable(MNISTTrain TestTrainer.cpp)
 
 target_include_directories(support PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/support")
-target_link_libraries(MNISTTraining PRIVATE sqlite3 pthread Network File-Storage support)
+target_link_libraries(MNISTTrain PRIVATE sqlite3 pthread Network File-Storage support)
