--- a/MNIST_Processing/CMakeLists.txt
+++ b/MNIST_Processing/CMakeLists.txt
@@ -4,6 +4,7 @@ add_library(
     "${CMAKE_CURRENT_SOURCE_DIR}/support/MNISTTester.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/support/MNISTTrainerV2.cpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/support/MNISTTrainerV2.hpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/support/ImageHolder.hpp"
 )
 
 add_executable(MNISTTrain TestTrainer.cpp)
